--- a/note/may-04-2021.md
+++ b/note/may-04-2021.md
@@ -19,3 +19,39 @@ Here is our list of the 10 best dark web monitoring tools for network admins:
     9: Dashlane Business A comprehensive password protection system that includes a Dark Web scanner.
     
     10: Have I Been Pwned? A free email address-related Dark Web scan.
+
+## Security Onion 2.3.50
+
+Security Onion 2.3.50 is here!
+
+## Screenshots
+
+Alerts
+![Alerts](https://raw.githubusercontent.com/security-onion-solutions/securityonion/master/screenshots/alerts-1.png)
+
+Hunt
+![Hunt](https://raw.githubusercontent.com/security-onion-solutions/securityonion/master/screenshots/hunt-1.png)
+
+### Release Notes
+
+https://docs.securityonion.net/en/2.3/release-notes.html
+
+### Requirements
+
+https://docs.securityonion.net/en/2.3/hardware.html
+
+### Download
+
+https://docs.securityonion.net/en/2.3/download.html
+
+### Installation
+
+https://docs.securityonion.net/en/2.3/installation.html
+
+### FAQ
+
+https://docs.securityonion.net/en/2.3/faq.html
+
+### Feedback
+
+https://docs.securityonion.net/en/2.3/community-support.html
